--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Titolo del test</title>
+    <title>Che animale sei ?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Pangolin:400,700|Proxima+Nova" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="provided-style.css"/>
